[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nb2025earthvision"
version = "1.0.0"
license = {text = "MIT"}
description = "Explainable Physical PolSAR Autoencoders for Soil Moisture Estimation"
authors = [
    {name = "N/A", email = "na@na.com"},
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
